--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700" rel="stylesheet">
 </head>
 <body>
+  <ul class="skip-links">
+    <li><a href="#nav">Jump to navigation</a></li>
+    <li><a href="#main">Jump to main content</a></li>
+    <li><a href="#galaxies">Jump to galaxies</a></li>
+    <li><a href="#techniques">Jump to techniques</a></li>
+    <li><a href="#satellites">Jump to satellites</a></li>
+  </ul>
 
-  <header class="masthead section-dark section-bg embed embed-16by9" id="galaxies">
+  <header class="masthead section-dark section-bg embed embed-16by9" id="galaxies" role="banner">
     <div class="absolute w-1 pin-tl text-center pad-t pad-b gutter-1-2">
       <div class="grid grid-middle">
         <div class="unit [ xs-1 l-1-2 ]">
@@ -29,9 +36,9 @@
     </div>
   </header>
 
-  <main>
+  <main role="main" id="main">
 
-    <section class="techniques section-light section-bg embed embed-16by9" id="techniques">
+    <section class="techniques section-light section-bg embed embed-16by9" id="techniques" tabindex="0">
       <div class="absolute pin-c text-center island-1-2 w-1 max-length">
         <h2 class="push-1-4">Hiding in Plain Sight</h2>
         <p class="push-1-2">Galaxies are everywhere we look in the night sky—but without special tools they look just like stars.</p>
@@ -39,7 +46,7 @@
       </div>
     </section>
 
-    <section class="satellites section-dark section-bg embed embed-16by9" id="satellites">
+    <section class="satellites section-dark section-bg embed embed-16by9" id="satellites" tabindex="0">
       <div class="absolute pin-c text-center island-1-2 w-1 max-length">
         <h2 class="push-1-4">Tools & Machines</h2>
         <p class="push-1-2">Scientists use lots of tools & machines to help them find all the different galaxies in the known universe.</p>
@@ -49,7 +56,7 @@
 
   </main>
 
-  <footer class="section-dark text-center pad-t pad-b gutter-1-2">
+  <footer class="section-dark text-center pad-t pad-b gutter-1-2" tabindex="0" role="contentinfo">
     <small>© The Search for Hidden Galaxies</small>
   </footer>
 
