Add role and id tags to nav and main

--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
   <ul class="skip-links">
     <li><a href="#nav">Jump to navigation</a></li>
     <li><a href="#main">Jump to main content</a></li>
-    <li><a href="#galaxies">Jump to galaxies</a></li>
-    <li><a href="#techniques">Jump to techniques</a></li>
-    <li><a href="#satellites">Jump to satellites</a></li>
   </ul>
 
   <header class="masthead section-dark section-bg embed embed-16by9" id="galaxies" role="banner">
@@ -25,7 +22,7 @@
         <div class="unit [ xs-1 l-1-2 ]">
           <h1 class="masthead-title push-1-2" data-shadow="The Search for Hidden&nbsp;Galaxies">The Search for Hidden&nbsp;Galaxies</h1>
         </div>
-        <nav class="nav unit [ xs-1 l-1-2 ]">
+        <nav class="nav unit [ xs-1 l-1-2 ]" role="navigation" id="nav" tabindex="-1">
           <ul class="list-group-inline push-1-2">
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#galaxies">Galaxies</a></li>
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#techniques">Techniques</a></li>
@@ -36,7 +33,7 @@
     </div>
   </header>
 
-  <main role="main" id="main">
+  <main role="main" id="main" tabindex="0">
 
     <section class="techniques section-light section-bg embed embed-16by9" id="techniques" tabindex="0">
       <div class="absolute pin-c text-center island-1-2 w-1 max-length">
